[package]
name = "mp4ra-rust"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"
description = "Types and associated constants representing code points managed by the MPEG4 Registration Authority"
readme = "README.md"
repository = "https://github.com/dholroyd/mp4ra-rust"
license = "MIT/Apache-2.0"
categories = [ "multimedia::video" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
four-cc = "0.1.0"